--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,6 @@
   pointer-events: none;
 }
 
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -69,12 +68,14 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.media-player {
-  transition: all 0.3s ease;
-  position: fixed;
-  background-color: #282c34;
-  color: white;
-  padding: 20px;
-  border-radius: 5px;
-  margin-top: 40px;
+@media (prefers-color-scheme: dark) {
+  body,
+  .video-bg {
+    background-color: transparent !important;
+  }
+
+  video,
+  .video-bg video {
+    background-color: transparent !important;
+  }
 }
